--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "bebb2c0c",
    "metadata": {},
    "outputs": [
@@ -40,8 +40,9 @@
    ],
    "source": [
     "t = np.linspace(0, 1, 10)\n",
-    "x = 2 * t\n",
-    "plt.plot(t, x)\n"
+    "x = 10 * t\n",
+    "plt.plot(t, x)\n",
+    "\n"
    ]
   },
   {
